<!-- Meet Patel N01460090 Section RNB -->

<resources>
    <string name="app_name">Meet Patel n01460090</string>
    <string name="background_text">Welcome Meet Patel N01460090</string>
    <string name="user_input">Enter your text</string>
    <string name="launch">Launch Site</string>
    <string name="DisplayDataInToast">Process Edit</string>
    <string name="LaunchSecActivity">Launch Activity</string>
    <string name="SnackStr">Meet Patel 2nd Screen</string>
    <string name="SnackActionStr">Launch</string>
    <string name="background_text2">My Second Screen Meet Patel N01460090</string>
    <string name="textFromFirst">Text from First Activity</string>
    <string name="imageStr">Image</string>
    <string name="PauseStr">Meet Patel N01460090</string>
    <string name="PauseTag">Pause Tag</string>
    <string name="LaunchBtnStr">Meet Patel - Launching Wikipedia!!</string>
    <string name="secAct">Send text to Second Activity</string>
</resources>