<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#02F0F8"
    tools:context=".PatelActivity">

  <TextView
      android:id="@+id/MeetTextView2"
      android:layout_width="409dp"
      android:layout_height="89dp"
      android:text="@string/background_text2"
      android:textAlignment="center"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.246" />

  <TextView
      android:id="@+id/MeetTextView3"
      android:layout_width="411dp"
      android:layout_height="102dp"
      android:text="@string/textFromFirst"
      android:textAlignment="center"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.499" />

  <ImageView
      android:id="@+id/MeetimageView"
      android:layout_width="241dp"
      android:layout_height="221dp"
      android:background="@color/black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.903"
      app:srcCompat="@drawable/image"
      android:contentDescription="@string/imageStr" />

</androidx.constraintlayout.widget.ConstraintLayout>